//protoc -I=./proto --python_out=./proto ./proto/packet.proto
syntax = "proto2";

message ICMPTunnelPacket {
  enum Action {
    START = 0;
    TERMINATE = 1;
    DATA_TRANSFER = 2;
    ACK = 3;
  }

  enum Direction {
    PROXY_CLIENT = 0;
    PROXY_SERVER = 1;
  }

  required uint32 session_id = 1;  //the client's session          
  optional uint32 seq = 2;  //the sequence number of packet   
  required Action action = 3;        
  required Direction direction = 4; 
  optional string destination_host = 5;       // destination host
  optional uint32 port = 6;     // destination port
  optional bytes payload = 7; 
}

